feat: show firebase mock messages on ui
Signed-off-by: Torsten Thiele <torsten.thiele@atos.net>

--- a/src/main/resources/views/confirm-page.html
+++ b/src/main/resources/views/confirm-page.html
@@ -4,6 +4,7 @@
   <script type="module" th:src="@{__${basepath}__/js/confirm.bundle.js}"></script>
   <body>
     <nav data-th-replace="~{fragments/snippets :: navbar}"></nav>
+    <div class="container" id="push-messages"></div>
     <div class="container">
       <h1 class="my-3">Confirm Login</h1>
       <p class="lead">
